# NEXUS

./: .env.example  .gitignore  README.md  docker-compose.yml
nexus-backend/: Dockerfile  pyproject.toml
nexus-backend/app/: __init__.py  config.py  main.py
nexus-backend/app/api/: auth.py  routes.py
nexus-backend/app/core/: database.py
nexus-backend/app/models/: __init__.py  schemas.py
nexus-backend/app/services/: __init__.py  calendar_service.py  orchestrator.py  provider_service.py  tools.py
nexus-backend/app/utils/: date_parse.py
nexus-backend/tests/: __init__.py
nexus-frontend/: index.html  package-lock.json  package.json  tailwind.config.js
nexus-frontend/src/: App.tsx  index.css
nexus-frontend/src/components/: AuditTrailSidebar.tsx  Layout.tsx  NexusHeader.tsx  UserDropdown.tsx
nexus-frontend/src/context/: AuthContext.tsx  ThemeContext.tsx  UserProfileContext.tsx
nexus-frontend/src/hooks/: useCampaignStream.ts
nexus-frontend/src/pages/: Admin.tsx  Appointments.tsx  Auth.tsx  CampaignDetail.tsx  Dashboard.tsx  Landing.tsx  Settings.tsx
nexus-frontend/src/types/: api.ts
scripts/: check-backend-workflow.sh
